# metlibs-tsdata

./: .gitignore  CMakeLists.txt  DynamicFunction.cc  DynamicFunction.h  FimexStream.cc  FimexStream.h  FimexTools.cc  FimexTools.h  HDFdefs.h  KlimaStream.cc  KlimaStream.h  LGPLHEAD  Makefile  Makefile.am  README  WdbQueries.cc  WdbQueries.h  WdbStream.cc  WdbStream.h  configure.ac  metlibs-tsdata-core.pc.in  metlibs-tsdata-fimex.pc.in  metlibs-tsdata-hdf4.pc.in  metlibs-tsdata-mora.pc.in  metlibs-tsdata-wdb.pc.in  ptAsciiStream.cc  ptAsciiStream.h  ptDataStream.h  ptDiagramData.cc  ptDiagramData.h  ptError.h  ptGribStream.cc  ptGribStream.h  ptHDFFile.cc  ptHDFFile.h  ptHDFUtils.cc  ptHDFUtils.h  ptMIROS22File.cc  ptMIROS22File.h  ptParameter.h  (+11 more)
cmake/: MetnoQtUtils.cmake
debian/: changelog  control  libmetlibs-tsdata-core8.install  libmetlibs-tsdata-fimex6.install  libmetlibs-tsdata-hdf4-7.install  libmetlibs-tsdata-mora-qt5-6.install  libmetlibs-tsdata-wdb6.install  metlibs-tsdata-core-dev.install  metlibs-tsdata-dev.install  metlibs-tsdata-fimex-dev.install  metlibs-tsdata-hdf4-dev.install  metlibs-tsdata-mora-qt4-dev.install  metlibs-tsdata-mora-qt5-dev.install  metlibs-tsdata-wdb-dev.install  rules
include/: Makefile.am  ptDataStream.h  ptDiagramData.h  ptMIROS22File.h  ptParameter.h  ptParameterDefinition.h  ptSHCinfo.h  ptTimeLine.h  ptWeatherParameter.h
m4/: freetype2.m4  mdl_have_opengl.m4  metno_boost.m4  metno_check.m4  metno_have_freetype2.m4  metno_have_ftgl.m4  metno_have_opengl.m4  metno_have_shapelib.m4  metno_have_udunits.m4  metno_hdf.m4  metno_set_version_info.m4
src/: CMakeLists.txt  DynamicFunction.cc  DynamicFunction.h  FimexStream.cc  FimexStream.h  FimexTools.cc  FimexTools.h  KlimaStream.cc  KlimaStream.h  Makefile  Makefile.am  PetsExceptions.h  SMHIMoraStream.cc  SMHIMoraStream.h  WdbCacheQuery.cc  WdbCacheQuery.h  WdbQueries.cc  WdbStream.cc  WdbStream.h  ptAsciiStream.cc  ptAsciiStream.h  ptDataStream.cc  ptDataStream.h  ptDiagramData.cc  ptDiagramData.h  ptError.cc  ptError.h  ptGribStream.cc  ptGribStream.h  ptHDFFile.cc  ptHDFFile.h  ptHDFUtils.cc  ptHDFUtils.h  ptMIROS22File.cc  ptMIROS22File.h  ptParameter.cc  ptParameter.h  ptParameterDefinition.cc  ptParameterDefinition.h  ptPrimitiveType.cc  (+6 more)
