pkg_includedir = ${prefix}/include/${PACKAGE_NAME}

pkg_include_HEADERS = \
HDFdefs.h \
ptAsciiStream.h \
ptDataStream.h \
ptDiagramData.h \
ptError.h \
ptHDFFile.h \
ptHDFUtils.h \
ptMIROS22File.h \
ptParameterDefinition.h \
ptParameter.h \
ptPrimitiveType.h \
ptSHCinfo.h \
ptTimeLine.h \
ptWeatherParameter.h


INSTALL=install -p # tells install to preserve timestamp
